--- a/pom.xml
+++ b/pom.xml
@@ -13,12 +13,19 @@
     <scala.main.version>2.10</scala.main.version>
     <scala.version>${scala.main.version}.2</scala.version>
 
+    <javassist.version>3.18.0-GA</javassist.version>
     <jetty.version>8.1.11.v20130520</jetty.version>
     <logback.version>1.0.13</logback.version>
+    <netty.version>4.0.3.Final</netty.version>
     <scalatra.version>2.2.1</scalatra.version>
   </properties>
 
   <dependencies>
+    <dependency>
+      <artifactId>javassist</artifactId>
+      <groupId>org.javassist</groupId>
+      <version>${javassist.version}</version>
+    </dependency>
     <dependency>
       <artifactId>jetty-server</artifactId>
       <groupId>org.eclipse.jetty</groupId>
@@ -33,6 +40,16 @@
       <artifactId>logback-classic</artifactId>
       <groupId>ch.qos.logback</groupId>
       <version>${logback.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>netty-codec-http</artifactId>
+      <groupId>io.netty</groupId>
+      <version>${netty.version}</version>
+    </dependency>
+    <dependency>
+      <artifactId>netty-handler</artifactId>
+      <groupId>io.netty</groupId>
+      <version>${netty.version}</version>
     </dependency>
     <dependency>
       <artifactId>scala-library</artifactId>
